--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<link rel="shortcut icon" href="images/favic.PNG">
 		
     	<!-- Bootstrap -->
-    	<link rel="stylesheet" type="text/css" href="assets/library/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/library/bootstrap/css/bootstrap.min.css">
 		
 		<!-- Font awesome -->
 		<link rel="stylesheet" type="text/css" href="assets/library/fontawesome/css/all.min.css" />
@@ -67,7 +67,7 @@
 			<section class="logo wow fadeInUp">
 				<div class="container-fluid">
 					<div class="row">
-						<div class="col-lg-12">
+						<div class="col-lg-12 bx">
 							
 							<img src="images/logox1.PNG" alt="">
 							
