--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			</section>
             
             <!-- Content -->
-			<div class="d-flex align-items-center min-vh-100">
+			<div class="d-flex align-items-center min-vh-100 hero-con">
 				<div class="container-fluid">
                     
                     <!-- Welcome -->
@@ -88,13 +88,13 @@
 								<span class="blc">Proseed Consulting <br> is </span>
 								<span class="cd-words-wrapper">
 									<b class="is-visible">Launching Soon</b>
-									<b>Equitableness</b>
-									<b>Egalitarianism</b>
+									<b>Elevating Employees</b>
+									<b>Creating Opportunities</b>
 								</span>
 							</h2>
 
 							<p class="wow fadeInUp" data-wow-delay="0.6s">
-								Our website is <strong>under construction</strong>, we are working quite resourcefully to make it live.
+								Our website is <strong>under construction</strong>, we are working quite resourcefully to make it go live.
 								<br class="d-none d-lg-block">
 								You will have <strong>jobs</strong> to your satisfaction. <br>
 								 The Countdown is On. Stay Updated!
@@ -148,8 +148,8 @@
 								<div class="col-lg-6 col-sm-12">
 
 										<ul class="social wow fadeInUp" data-wow-delay="2.4s">
-												<li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-												<li><a href="#"><i class="fab fa-facebook-f"></i></a></li> 
+												<li><a href="#0"><i class="fab fa-linkedin"></i></a></li>
+												<li><a href="#0"><i class="fab fa-facebook-f"></i></a></li> 
 										</ul>
 
 								</div>
@@ -208,13 +208,13 @@
 								<div class="col-lg-4">
 									<h5><i class="fas fa-map"></i></h5>
 									<span>Address</span>
-									<p>104 Ekpen Street, Ajamimogha, Warri</p>
+									<p>Lekki Peninsula</p>
 								</div>
 								<div class="col-lg-4">
 									<h5><i class="fas fa-phone"></i></h5>
 									<span>Phone</span>
 									<p> 
-										+234-7030330047
+										+234-8137620554
 									</p>	
 								</div>											
 								<div class="col-lg-4">
