--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@
 							<div class="row">
 								<div class="col-lg-12">
 									<p>
-										S. Efejuku (Miemie) Chambers is one of the <strong>top law</strong> firms in West Africa, assisting local businesses through various legal requirements from Nigeria. The law firm has a world class standard of deploying experienced lawyers to review every legal matter and transaction.
+										Proseed Consulting is one of the <strong>top recruitment</strong> firms in West Africa, assisting local businesses through various employee requirements from Nigeria. The HR firm has a world class standard of deploying experienced talents to organizations and companies.
 									</p>
 									<p>
-										Every individual or corporation knows the importance of <strong>quality legal services</strong> both in Nigeria and anywhere in the world. Lawyers that are extremely hardworking and committed to their goals will definitely <strong>negotiate a better bargain for a client</strong>, either in transaction, roundtable, arbitration or courtroom. Our lawyers are driven by their passion for legal services and they are always after the best and fair justifiable representation in every bargain.
+										Every individual or corporation knows the importance of <strong>sound talents</strong> both in Nigeria and anywhere in the world. Recruits that are smart, hardworking and committed to organization targets definitely <strong>is a better bargain for a client</strong>. Our recruits are driven by their passion.
 									</p>
 								</div>
 							</div>
